--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <h1>GeekPapa</h1>
   <p>Where philosophy meets play.</p>
   <p>This is a place, not a feed.</p>
+  <p>This is a digital garden. Meaning is invited, not extracted.</p>
 </body>
 </html>
