Testing local Git workflow on D245

--- a/index.html
+++ b/index.html
@@ -10,4 +10,5 @@
   <p>This is a place, not a feed.</p>
   <p>This is a digital garden. Meaning is invited, not extracted.</p>
 </body>
+<!-- Testing local Git workflow - D245 -->
 </html>
