adding <html> tagging

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!doctype html>
+<!-- Loop Echo v2.2 | Deployed D245 via local Git workflow -->
+<html lang="en">
 <html>
 <head>
   <meta charset="utf-8">
